# technical_test_03_22

./: README.MD  pyproject.toml
example/config/: api.py  settings.py  urls.py
example/example/: admin.py  api.py  etl.py  models.py  schema.py
example/example/management/commands/: __init__.py  load_into_db.py
example/example/migrations/: 0001_initial.py
example/example/tests/: EtlTest.py
example/streamlit/: app.py  dashboard.py
